# beets-multigenre

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
beetsplug/: multigenre.py
tests/: test_multigenre.py
